2009-11-13  Ian Beckwith  <ianb@erislabs.net>

	* freebsd: new options -psearch=TYPE -psection=SEC
	  to conduct a search of type TYPE in section SEC of ports.
	* netbsd:  new option -ps to search ports
	* openbsd: new option -ps to search ports
	* URLs for *bsd portsearch, finkpkg, macports and rpmsearch
	  from whohas(1), http://www.philippwesche.org/200811/whohas/intro.html
	* cia, pubmed: fixed tests.

2009-11-12  Ian Beckwith  <ianb@erislabs.net>

	* New elvi:
	  + finkpkg: search Fink packages.
	  + macports: search macports packages.
	  + rpmsearch: search for packages in rpm-based distros.
	* surfraw.IN: w3_parse_args: avoid bogus initial space in w3_args

2009-11-11  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: debpkghome: view home page of a debian package.

2009-11-10  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: acronym, gcache (google cache).
	  Thanks to fittabile@lifegate.it
	* surfraw.IN: only list local elvi if $localelvidir contains
	  files.
	* README: update elvi list and surfraw options.
	* configure.in, HACKING: specify automake 1.11

2009-11-08  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: youtube. Thanks to Sumant Oemrawsingh.

2009-11-07  Ian Beckwith  <ianb@erislabs.net>

	* New elvi, thanks to Sumant Oemrawsingh:
	  + cliki     - search the common lisp wiki.
	  + l1sp      - search lisp documentation.
	  + mathworld - search Wolfram MathWorld.
	  + mininova  - search mininova for torrents.

2009-11-06  Ian Beckwith  <ianb@erislabs.net>

	* examples/uzbl_load_url_from_surfraw:
	  + Applied patch from Sumant Oemrawsingh to strip "GLOBAL ELVI"
	    and "LOCALELVI" and support vertical menus if patched dmenu is
	    available.
	  + present_menu(): use awk(1) instead of cut(1), so tabs in
	    bookmark files are handled correctly.
	  + Add '.IN' suffix and dependency so correct value of @AWK@
	    is picked up from ./configure.
	* Add examples/ to SUBDIRS, move uzbl_load_url_from_surfraw
	  build logic to examples/Makefile.am