@@ -1,25 +1,26 @@
 EXTRA_DIST = runtests elviwithouttests README COOKIES W.test		\
-	alioth.test altavista.test amazon.test archpkg.test arxiv.test	\
-	ask.test aur.test austlii.test bbcnews.test cddb.test cia.test	\
-	cite.test cliki.test cnn.test codesearch.test comlaw.test	\
-	ctan.test currency.test cve.test debbugs.test debcontents.test	\
-	deblists.test deblogs.test debpackages.test debpts.test		\
-	debsec.test debvcsbrowse.test debwiki.test deja.test		\
-	discogs.test dmoz.test ebay.test etym.test excite.test		\
-	fast.test filesearching.test foldoc.test freebsd.test		\
-	freedb.test freshmeat.test fsfdir.test genbugs.test		\
-	genpkg.test genportage.test google.test gutenberg.test		\
-	happypenguin.test imdb.test ixquick.test javasun.test		\
-	lastfm.test leodict.test lsm.test mathworld.test mininova.test	\
-	musicbrainz.test netbsd.test ntrs.test openbsd.test		\
-	opensearch.test piratebay.test port.test pgpkeys.test		\
-	pubmed.test rae.test rfc.test rhyme.test scholar.test		\
-	scicom.test scpan.test slashdot.test slinuxdoc.test		\
-	sourceforge.test springer.test stockquote.test			\
-	sunonesearch.test thesaurus.test translate.test urban.test	\
-	w3css.test w3html.test w3link.test w3rdf.test wayback.test	\
-	webster.test wetandwild.test wikipedia.test woffle.test		\
-	yahoo.test youtube.test yubnub.test
+	acronym.test alioth.test altavista.test amazon.test		\
+	archpkg.test arxiv.test ask.test aur.test austlii.test		\
+	bbcnews.test cddb.test cia.test cite.test cliki.test cnn.test	\
+	codesearch.test comlaw.test ctan.test currency.test cve.test	\
+	debbugs.test debcontents.test deblists.test deblogs.test	\
+	debpackages.test debpkghome.test debpts.test debsec.test	\
+	debvcsbrowse.test debwiki.test deja.test discogs.test		\
+	dmoz.test ebay.test etym.test excite.test fast.test		\
+	filesearching.test finkpkg.test foldoc.test freebsd.test	\
+	freedb.test freshmeat.test fsfdir.test gcache.test		\
+	genbugs.test genpkg.test genportage.test google.test		\
+	gutenberg.test happypenguin.test imdb.test ixquick.test		\
+	javasun.test lastfm.test leodict.test l1sp.test lsm.test	\
+	macports.test mathworld.test mininova.test musicbrainz.test	\
+	netbsd.test ntrs.test openbsd.test opensearch.test		\
+	piratebay.test port.test pgpkeys.test pubmed.test rae.test	\
+	rfc.test rhyme.test rpmsearch.test scholar.test scicom.test	\
+	scpan.test slashdot.test slinuxdoc.test sourceforge.test	\
+	springer.test stockquote.test sunonesearch.test thesaurus.test	\
+	translate.test urban.test w3css.test w3html.test w3link.test	\
+	w3rdf.test wayback.test webster.test wetandwild.test		\
+	wikipedia.test woffle.test yahoo.test youtube.test yubnub.test
 
 test:
 	./runtests
