@@ -15,7 +15,7 @@
 
 				  N E W S
 
-Fri Nov 13 04:38:10 GMT 2009  - surfraw 2.2.6
+Fri Nov 20 03:34:19 GMT 2009  - surfraw 2.2.6
 
         * New elvi:
           + by Sumant Oemrawsingh:
